# Simple_Voting_System

./: README.md
backend/: .env  index.js  package-lock.json  package.json  schema.sql
contracts/contracts/hello-world/: Cargo.toml
contracts/contracts/hello-world/src/: lib.rs
contracts/hello-world/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
